Add Turbine to project; Remove ExampleInstrumentedTest; Use Turbine to test if loadProducts() emits loading then success;